example/lib/src/arbs/errors/app_be.arb
{
  "@@locale": "be",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Адбылася памылка",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Адбылася непрадбачаная памылка",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Баг-рэпарт паспяхова адпраўлены.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}